--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+
+@layer base {
+  html {
+    font-family: "Mona Sans", sans-serif;
+  }
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
